Fix pom.xml