@@ -11,9 +11,9 @@
   <properties>
     <java.version>25</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <zxing.version>3.5.3</zxing.version>
-    <junit.version>5.11.4</junit.version>
-    <assertj.version>3.27.3</assertj.version>
+    <zxing.version>3.5.4</zxing.version>
+    <junit.version>5.14.2</junit.version>
+    <assertj.version>3.27.6</assertj.version>
   </properties>
 
   <dependencies>
@@ -47,18 +47,12 @@
         <version>3.13.0</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
